package grupo5;

public enum CategoriaCliente {
    ESTUDANTE, PROFESSOR, EMPRESA, AVULSO
}
